# lstm-stocks

./: .gitignore  pyproject.toml
src/: lstm.ipynb
