[tool.poetry]
name = "stock-market-lstm"
version = "0.1.0"
description = ""
authors = ["AJ <arijeet.mkh@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_market_lstm"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
yfinance = "^0.2.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
jupyter = "^1.0.0"
ipympl = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
